src/sass/main.scss
/// Sass variables
$font-stack: 'Bai Jamjuree', sans-serif;
$color-btn-a: hsl(171, 66%, 44%);
$color-btn-b: hsl(233, 100%, 69%);
$header-opacity: 0.8;
$margin-bottom: (
  'xs'      : 0.75rem, 
  's'       : 1.5rem, 
  'm'       : 2rem, 
  'lg'      : 2.5rem,
  'xl'      : 3rem,
  'xxl'     : 3.5rem,
  'xxxl'    : 4rem,
  'xxxxl'   : 8rem
  );

/// Basic Normalization
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

li {
  list-style-type: none;
}


/// Global Styles
html {
  font-size: 18px;
}

body {
  font-family: $font-stack;
  text-align: center;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  padding: 5rem 1rem 0;
  width: 100vw;
  min-width: 375px;
  margin: 0 auto;
  background: url('../img/bg-header-mobile.png') no-repeat;
  /// Removes highlight when clicking/tapping
  -webkit-tap-highlight-color: transparent; 

  .container {
    grid-column: 1 / span 4;
  }

  section {
    margin-bottom: map-get($margin-bottom, 'xxxxl');
  }

  h2 {
    margin-bottom: 1.5rem;
    opacity: $header-opacity; 
  }

  h3 {
    opacity: $header-opacity; 
  }

  p {
    line-height: 1.5rem;
    opacity: 0.6;
  }

  /// iOS and Mac button styles
  .--btn {
    display: block;
    padding: 1rem 0;
    border-radius: 3rem;
    margin: 1.5rem auto;
    color: white;
    font-weight: 600;
    letter-spacing: 1.5px;

  }

  .--btn-a {
    background-color: $color-btn-a;
    box-shadow: 0 4px 0 0 hsl(171, 69%, 33%);
  }

  .--btn-a:active {
    background-color:hsl(171, 69%, 54%)
  }

  .--btn-b {
    background-color: $color-btn-b;
    box-shadow: 0 4px 0 0 hsl(233, 56%, 52%);
  }

  .--btn-b:active {
    background-color:hsl(233, 100%, 77%);
  }

  /// Change background image to desktop size when screen size is greater than 375
  @media (min-width: 376px) {
      background-image: url('../img/bg-header-desktop.png');
      background-size: 100%;
  }
}

/// Header section
.header {
  margin-bottom: map-get($margin-bottom, 'xxxxl');

  &__logo-container {
    display: inline-block;
    margin-bottom: map-get($margin-bottom, 'xl');
  }

  &__title {
    font-size: 1.75rem;
    margin-bottom: map-get($margin-bottom, 's');
  }

  &__paragraph {
    margin-bottom: 2.5rem;
  }
}

/// Section-1
.section-1 {

  &__header {
    margin-bottom: map-get($margin-bottom, 's');
  }

  &__image-container {
    display: inline-block;
    width: 100%;
  }

  &__image {
    width: 100%;
    margin: 3rem 0;
  }

  &__feature {
    margin-bottom: map-get($margin-bottom, 'lg');;
  }

  h3 {
    margin-bottom: map-get($margin-bottom, 'xs');;
  }
}

/// Section-2
.section-2 {
  &__paragraph {
    margin-bottom: map-get($margin-bottom, 'xxxl');
  }
  &__image {
    width: 100%;
  }
}


/// Section-3
.section-3 {

  & > div {
    margin-bottom: map-get($margin-bottom, 'xxxl');
  
    .feature {
      margin-bottom: map-get($margin-bottom, 'xxxl');
    }
  
    .__partners-container {
      display: block;
      margin-bottom: map-get($margin-bottom, 'xxxl');
    }
  }

  .icon {
    display: block;
  }

  .fas {
    display: block;
    font-size: 3.5rem;
    margin: 1.5rem auto;
    opacity: $header-opacity;
  }
}

/// Footer
footer {
  grid-column: 1 / span 4;
  margin: 0 -1rem;
  height: 100%;
  background-color: hsl(0, 0%, 95%);

  .footer-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .footer__logo-container {
    display: inline-block;
    margin: 2.5rem 0;
  }

  .__nav-list {
    margin-bottom: 2rem;
    font-size: 1.25rem;
    cursor: pointer;
  }

  .__nav-list:active {
    color: hsl(171, 69%, 54%);
  }

  .social-media-container {
    display: flex;
    justify-content: center;
  }

  .social-media {
    margin: 2rem 1rem;
    font-size: 2rem;
    opacity: 0.7;
  }

  .attribution {
    display: flex;
    flex-direction: column;
    margin: 1.5rem 0;
    font-size: 1rem;
  }
}


@media (min-width: 1440px){
  body {
    grid-template-columns: repeat(12, 1fr);

    .container {
      grid-column: 1 / span 12;
      display: grid;
      grid-template-columns: repeat(12, 1fr);

      h1 {
        font-size: 3rem;
      }

      h2 {
        font-size: 2.5rem;
      }

      h3 {
        font-size: 2rem;
      }

      p {
        font-size: 1.5rem;
        line-height: 2.5rem;
      }

      .--btn {
        font-size: 1.5rem;
      }
    }

    .__btn-container {
      display: flex;
      justify-content: space-around;
      max-width: 50rem;
      margin: 0 auto;
    }

    .--btn {
      width: 100%;
      margin: 2.5rem;
    }
  }

  .header {
    grid-column: 4 / span 6;
  }

  .section-1 {
    grid-column: 1 / span 12;
    margin: 0 -1rem;

    &__header-container {
      width: 60%;
      margin: 0 auto;
    }

    &__features-container {
      display: flex;
    }

    &__image-container {
      width: 55%;
      position: relative;
      left: -2rem;
    }

    &__feature-set-a {
      width: 45%;
      text-align: left;
      padding: 10% 10rem 10% 4rem;
    }
  }

  .section-2 {
    grid-column: 4 / span 6;
  }

  .section-3 {
    grid-column: 2 / span 10;

    &__feature-set-b,
    &__partners {
      display: flex;
      justify-content: space-between;
    }

    .fas {
      font-size: 5rem;
    }

    .__partners-logo {
      width: 15rem;
    }
  }

  .feature {
    width: 30%;
  }

  .section-4 {
    grid-column: 4 / span 6;
  }

  footer {
    grid-column: 1 / span 12;
    align-items: center;
    padding: 2rem 10% 0;

    .footer-container {
      flex-direction: row;
      align-items: center;
      max-width: 1900px;
      border-bottom: 1px solid rgba(0, 0, 0, 0.8);
      margin: 0 auto;
    }

    .footer__nav {
      column-count: 3;
      column-gap: 3rem;
      text-align: left;
      line-height: 1rem;
    }

    .attribution {
      flex-direction: row;
      max-width: 1900px;
      margin: 1.5rem auto;
      justify-content: center;

      .collab {
        margin: 0 0.5rem;
      }
    }
  }
}

